Thu Feb 20 17:38:23 1997  Richard Basch  <basch@lehman.com>

	* configure.in: awk is required by the Makefile
	* Makefile.in: Re-arranged build/install rules because
		krb_err.h is a generated file.

Mon Feb 17 13:59:41 1997  Richard Basch  <basch@lehman.com>

	* des.h: Added various function prototypes
	* krb.h: Moved various macros from krb.h to des.h so
		prototypes could be added to des.h

Sun Feb 16 18:43:24 1997  Richard Basch  <basch@lehman.com>

	* krb.h:
		Removed INTERFACE declaration
		Added prototypes for exported V4 functions

Thu Feb  6 00:22:22 1997  Richard Basch  <basch@lehman.com>

	* krb.h: Make sure KRB5_EXPORTVAR is defined

Fri Nov 22 11:34:46 1996  Sam Hartman  <hartmans@mit.edu>

	* Makefile.in:  Install krb_err.h [218]

Thu Oct 31 17:27:08 1996  Sam Hartman  <hartmans@mit.edu>

	* Makefile.in (install): Start installing headers again [36]

Sun Jul  7 18:18:45 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* krb4-proto.h: Change prototype for decomp_ticket to match source
		(addr is not unsigned long *)

Tue Dec 19 17:10:06 1995  Theodore Y. Ts'o  <tytso@dcl>

	* kparse.h (LineNbr): Remove declaration of LineNbr; no longer
		exported by kparse.c

Sun Nov 12 05:18:05 1995  Mark W. Eichin  <eichin@cygnus.com>

	* krb.h (KEYFILE): change to call krb__get_srvtabname with a
	default of the old hardcoded value "/etc/srvtab".

Wed Jun 28 00:01:52 1995  Mark Eichin  <eichin@cygnus.com>

	* krb4-proto.h: correct signature for krb_rd_req.

Tue Jun 27 23:53:22 1995  Mark Eichin  <eichin@cygnus.com>

	* krb.h (swap_u_long): use KRB4_32 in swap() macros.

Thu Jun 22 16:06:26 1995  Tom Yu  (tlyu@dragons-lair)

	* krb4-proto.h, krb.h: reverse sense of KRB5_PROVIDE_PROTOTYPES
		(-> KRB5_NO_PROTOTYPES)

Fri Jun  9 18:40:51 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Fri Jun  9 15:51:45 1995  Theodore Y. Ts'o  <tytso@lurch.mit.edu>
